--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ markdown: redcarpet
 timezone: Europe/Berlin
 paginate: 4
 paginate_path: "blog/page:num"
+future: false
 
 analytics:
   provider: google
