--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 name: Hector Zarate. iOS Cowboy.
-markdown: redcarpet 
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
 timezone: Europe/Berlin
 paginate: 4
 paginate_path: "blog/page:num"
