Add missing gems in the config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: Hector Zarate. iOS Cowboy.
+gems: [jekyll-paginate]
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
